Updates styling to fix TOC width so as to not overlap with the blog content

--- a/assets/blog/css/blog.scss
+++ b/assets/blog/css/blog.scss
@@ -29,8 +29,8 @@ $color-nav-menu-link-hover: #2c5d8b;
 $color-post-small-title-link: $color-text;
 
 $width-menu-mobile: 300px;
-$width-post-desktop: 860px;
-$toc-width: 280px;
+$width-post-desktop: 800px;
+$toc-width: 260px;
 
 body {
   font-family: "Raleway", Helvetica, Arial, sans-serif;
